# micro-attendance-system

./: README.md  api-test.py  facial-recognition.py  full_trained_svm_model.clf  pyproject.toml
arcface-recognizer/: face-recognition.py  face_encodings.csv  helpers.py  label_encoder.pkl
db/: attendance.db
src/: app.py  background_sched.py  db.py  exceptions.py  facial_cli.py  facial_recognition.py  response.py  route.py
src/model/: attendance.py  attendance_detail.py  classroom.py  enrollments.py  model_exception.py  student.py  utils.py
src/route/providers/: base.py
src/route/v1/: alltxt.txt  attendance.py  classroom.py  router.py  stats.py  student.py
src/schema/: attendance.py  classroom.py  student.py
